@startuml
skinparam classAttributeIconSize 0

class Main {
  + {static} main(String[] args)
}

class SafeDecoder {
  + {static} decodePassword(Stream<String> lines) : int
}

class DialState <<record>> {
  - position : int
  - zeroCount : int
  + applyRotation(Rotation rotation) : DialState
  - getFinalPosition(char dir, int steps) : int
  - getZeroPassages(char dir, int steps) : int
}

class Rotation <<record>> {
  - direction : char
  - distance : int
  + {static} fromText(String line) : Rotation
}

Main ..> SafeDecoder : "usa"
SafeDecoder ..> DialState : "reduce"
SafeDecoder ..> Rotation : "mapea"

@enduml